Back-end implementation